package com.two.product;

/*
PROJECT NAME : design-patterns-java
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 7/23/2021 12:11 AM
*/

public class ConcreteProductTwo implements Product {
    @Override
    public String getName() {
        return "It's product Two ...";
    }
}
