package com.two.product;

/*
PROJECT NAME : design-patterns-java
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 7/23/2021 12:09 AM
*/

public interface Product {
    String getName();
}
